<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_contact_page">Contacts</string>
    <string name="contactTitle">Contacts</string>
    <string name="loginPageTitle">Login Page</string>
    <string name="siteNameTitle">Site Name</string>
    <string name="usernameEditText">Username</string>
    <string name="passwordEditText">Password</string>
    <string name="sender_id">930098142781</string>

    <string name="test_sender">merry</string>
    <string name="test_receiver">pippin</string>



    <string name="password_label">password</string>
    <string name="site_label">sitename</string>
    <string name="contact_label">contact</string>
    <string name="username_label">username</string>
    <string name="new_convo_label">new conversation</string>
    <string name="new_message_label">new message</string>
    <string name="message_type_label">messageStatus</string>
    <string name="message_label">message</string>

</resources>
